Changes for 2.3.2

New features:
A.F....... [ZBX-1357] updated Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)

Bug fixes:
....I..... [ZBX-8306] added Percona database support when compiling with --with-mysql configuration option (wiper)
.......PS. [ZBX-8287] added truncating of long text values to maximum field length before inserting into database (Andris)
........S. [ZBX-3163] fixed trigger evaluation order so that it takes dependencies into account (asaveljevs)
A.F....... [ZBX-7373] improved performance of latest data and item overview pages by taking data for limited period only (Pavels)
..F....... [ZBX-8200] improved performance of Monitoring / Events page (Krists)
..F....... [ZBX-7536] now host visible names are shown in popups instead of hostname (Andrejs)
..F....... [ZBX-8292] fixed host prototype creation (Krists)
..F.....S. [ZBX-8092] changed the way the number of active triggers is calculated in the dashboard and zabbix[triggers] item (Andrejs, igors)
........S. [ZBX-8092] added disabled triggers to the configuration cache for correct macro expansion in notifications (igors)
........S. [ZBX-7901] improved value cache database operations when caching count based requests (wiper)
...G...PS. [ZBX-8172] fixed null JSON value decoding (wiper)
.......PS. [ZBX-8188] fixed IPMI items staying supported when sensor data becomes unavailable (asaveljevs, dimir)
..F....... [ZBX-8216] fixed screen import error (Andrejs)
..F....... [ZBX-8245] fixed repeating of actions while sorting / paging (Andrejs)
A.F....... [ZBX-5567] removed parameter "not_proxy_hosts" from hostgroup.get API method and frontend code (Krists)
..F....... [ZBX-8271] fixed importing of maps with LLD discovered hosts (Andrejs)

--------------------------------------------------------------------------------