@@ -6,6 +6,7 @@ A.F....... [ZBX-1357] updated Polish, Russian and Slovak translations; thanks to
 ..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)
 
 Bug fixes:
+...G...... [ZBX-8327] fixed possible crash when processing Windows eventlog (wiper)
 ....I..... [ZBX-8306] added Percona database support when compiling with --with-mysql configuration option (wiper)
 .......PS. [ZBX-8287] added truncating of long text values to maximum field length before inserting into database (Andris)
 ........S. [ZBX-3163] fixed trigger evaluation order so that it takes dependencies into account (asaveljevs)
@@ -186,6 +187,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Polish, R
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+...G...... [ZBX-8327] fixed possible crash when processing Windows eventlog (wiper)
 ..F....... [ZBX-8302] fixed ordering of discovery rules (Andrejs)
 ..F....... [ZBX-8209] improved host and item name column widths on Monitoring / Latest data page (Krists)
 .......PS. [ZBX-8287] added truncating of long text values to maximum field length before inserting into database (Andris)
@@ -1152,6 +1154,7 @@ New features:
 A.F....... [ZBX-1357] updated Slovak translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+...G...... [ZBX-8327] fixed possible crash when processing Windows eventlog (wiper)
 .......PS. [ZBX-8188] fixed IPMI items staying supported when sensor data becomes unavailable (asaveljevs, dimir)
 .......PS. [ZBX-7576] when pinging a broadcast address ignore responses from other addresses (wiper)
 ...G...... [ZBX-6531] fixed memory leak in filesystem discovery on AIX systems (Juris)
